fix #92 - collapsed theads should be one line

--- a/h/sass/common.scss
+++ b/h/sass/common.scss
@@ -325,6 +325,10 @@ form, .form-vertical {
       margin-top: 0;
     }
     & > .hyp-thread { overflow: hidden; }
+    & > .hyp-user {
+      display: run-in;
+      margin-right: .25em;
+    }
   }
 
 }
